--- a/quiz.html
+++ b/quiz.html
@@ -29,7 +29,7 @@
         <p id="score">Score: 0</p>
 
         <!-- Volgende vraag knop -->
-        <button id="next_button">Volgende vraag</button>
+        <button onclick="show_question()">Volgende vraag</button>
 
         <script src="quiz.js"></script>
     </body>
